--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,28 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ocBnbfw5&__jvst=Employee&__jvsd=sewo8gw1&__jvsc=Twitter&bid=nETQmMw0'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/joinsharenow/jobs/4497808002'>Job Application for Product Designer (f/m/d) at SHARE NOW</a></h5> 
+<p><span class="badge badge-light">Hamburg</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">London, United Kingdom</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432901-senior-product-manager-b2b-saas-voted-number-1-tech-company'>Fulton Garrick Ltd SENIOR PRODUCT MANAGER -B2B SAAS - VOTED NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">London, United Kingdom</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">London, United Kingdom</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/snapdocs/f3a4f1a5-1da6-44bb-a009-09d2d283a2d4'>Snapdocs, Inc. - Product Manager</a></h5> 
@@ -198,7 +218,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698320437-sr-product-manager-digital-products-merchant-services'>Visa Sr. Product Manager, Digital Products, Merchant Services | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698320437-sr-product-manager-digital-products-merchant-services'>Visa Sr. Product Manager, Digital Products, Merchant Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Foster City, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -210,7 +230,7 @@
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/243e23db-4a62-4317-b222-216a103110a0'>Etsy - Senior Product Designer, Shopping Experiences</a></h5> 
+<h5><a href='https://jobs.lever.co/etsy/243e23db-4a62-4317-b222-216a103110a0'>Etsy - Senior Product Designer, Shopping Experiences</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -252,6 +272,11 @@
 <p><span class="badge badge-light">Melbourne  Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
+<h5><a href='https://aig.wd1.myworkdayjobs.com/en-US/aig/job/London/Product-Manager----Investments-AI--Trade-Credit-_JR1907309-1'>Product Manager - Investments AI</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 13, 2019 ... Attracting top talent through an inclusive culture of freedom and responsibility;; 
+Pushing the boundaries of what's possible in advanced machine learning?...</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/sugarcrm/job/ocBnbfw5'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -282,11 +307,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698275796-marketing-technology-product-manager'>Traveloka Marketing Technology Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698275796-marketing-technology-product-manager'>Traveloka Marketing Technology Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qahaVfwg&k=Job&j=oH31afwF&__jvst=Employee&__jvsd=sTrGdgwY&__jvsc=Twitter&bid=nEYRlMw5'>Santander Consumer USA Careers - Digital Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qahaVfwg&k=Job&j=oH31afwF&__jvst=Employee&__jvsd=sTrGdgwY&__jvsc=Twitter&bid=nEYRlMw5'>Santander Consumer USA Careers - Digital Product Manager</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -298,17 +323,17 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getsimpl.recruiterbox.com/jobs/fk01ayx/'>
+<h5><a href='https://getsimpl.recruiterbox.com/jobs/fk01ayx/'>
     Product Designer at Simpl
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/loftium/64db8e51-e27e-49e9-b90c-55d8c5246ca8'>Loftium - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/loftium/64db8e51-e27e-49e9-b90c-55d8c5246ca8'>Loftium - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://yerdle.recruiterbox.com/jobs/fk03io1'>
+<h5><a href='http://yerdle.recruiterbox.com/jobs/fk03io1'>
     Associate Product Manager at Yerdle
 </a></h5> 
 <p><span class="badge badge-light">Brisbane California</span></p>
@@ -345,7 +370,7 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJZkafwW&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nl7KlMwO'>ServiceNow Careers - Sr. Product Manager, Partnership - Mobile Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJZkafwW&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nl7KlMwO'>ServiceNow Careers - Sr. Product Manager, Partnership - Mobile Platform</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -441,35 +466,9 @@ business systems analyst, consultant, product manager, and/or some?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/3a00be10-716e-44c2-a6f0-75b2772e4a7e'>Shopify - Product Manager - Merchant Features - Shopify Fulfillment Network</a></h5> 
+<h5><a href='https://jobs.lever.co/shopify/3a00be10-716e-44c2-a6f0-75b2772e4a7e'>Shopify - Product Manager - Merchant Features - Shopify Fulfillment Network</a></h5> 
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/shopify/3debf5c1-4511-4b93-bf50-bbddc668739e'>Shopify - Product Manager - Shopify Pay</a></h5> 
-<p><span class="badge badge-light">Montreal, Canada</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/shopify/82e3b440-977c-4ace-b160-bf76de03d8e2'>Shopify - Senior Product Designer, Balance</a></h5> 
-<p><span class="badge badge-light">Montreal, Canada</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/shopify/c82105d9-cd8c-4e00-8903-a07c75ae2050'>Shopify - Senior Product Manager Lead - Logistics</a></h5> 
-<p><span class="badge badge-light">Ottawa, Canada</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/rewardsnetwork/fa8fa41e-1267-462d-a6a1-a09340c95dc6'>Rewards Network - Product Manager</a></h5> 
-<p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://uken.recruiterbox.com/jobs/fk03i2v/'>
-    Product Manager at Uken Games
-</a></h5> 
-<p><span class="badge badge-light">Toronto, Ontario</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDyw9fwA&__jvst=Employee+Referral&__jvsd=spapQhwA&__jvsc=Twitter&bid=nKlElMwl'>ServiceNow Careers - Product Manager - Technical</a></h5> 
-<p><span class="badge badge-light">Hyderabad, India</span></p>
-<p>Posted on:: 2019-10-27</p>
 <hr/>
 
 
